[gd_scene load_steps=8 format=2]

[ext_resource path="res://Graphics/Environment/Upgrade.png" type="Texture" id=1]
[ext_resource path="res://Fonts/IndieFlower-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UpgradeBox.gd" type="Script" id=3]
[ext_resource path="res://Audio/Use.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 2 )

[node name="UpgradeBox" type="Area2D"]
pause_mode = 2
position = Vector2( -0.30875, -0.0442314 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.32428, 19.6001 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 15.0
margin_top = 592.0
margin_right = 1352.0
margin_bottom = 755.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ColorRect"]
show_behind_parent = true
margin_left = -7.0
margin_top = -8.0
margin_right = 1345.0
margin_bottom = 168.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 523.288
margin_top = 6.58582
margin_right = 798.288
margin_bottom = 59.5858
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pick your upgrade:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice 1" type="Button" parent="CanvasLayer/ColorRect"]
anchor_left = 0.07
anchor_top = 0.361
anchor_right = 0.07
anchor_bottom = 0.361
margin_left = -68.594
margin_top = 9.99584
margin_right = 111.406
margin_bottom = 68.9958
rect_pivot_offset = Vector2( 144, 80 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.807843, 0.807843, 0.807843, 1 )
text = "Health +1"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice 2" type="Button" parent="CanvasLayer/ColorRect"]
anchor_left = 0.07
anchor_top = 0.361
anchor_right = 0.07
anchor_bottom = 0.361
margin_left = 467.738
margin_top = 13.5635
margin_right = 647.738
margin_bottom = 72.5635
rect_pivot_offset = Vector2( 144, 80 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.807843, 0.807843, 0.807843, 1 )
text = "Regen +10%"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice 3" type="Button" parent="CanvasLayer/ColorRect"]
anchor_left = 0.07
anchor_top = 0.361
anchor_right = 0.07
anchor_bottom = 0.361
margin_left = 1008.71
margin_top = 11.7642
margin_right = 1188.71
margin_bottom = 70.7642
rect_pivot_offset = Vector2( 144, 80 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.807843, 0.807843, 0.807843, 1 )
text = "energy +25"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="button_up" from="CanvasLayer/ColorRect/Choice 1" to="." method="_on_Choice_1_button_up"]
[connection signal="button_up" from="CanvasLayer/ColorRect/Choice 2" to="." method="_on_Choice_2_button_up"]
[connection signal="button_up" from="CanvasLayer/ColorRect/Choice 3" to="." method="_on_Choice_3_button_up"]
